fix list of marker icons alignment

--- a/leaflet-dist/leaflet.css
+++ b/leaflet-dist/leaflet.css
@@ -17,6 +17,7 @@
 	margin: 0px !important;
 	padding: 0px !important;
 	border: none !important;
+	display:inline !important;
 }
 .lmm-listmarkers table {
 	margin: 0px !important;
